Fix nav-bar shifting issue

--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,12 @@ h3{ font-size: var(--fs-h3) }
 /* Header */
 
 .logo {
+    position: absolute;
+    top: 0;
+    left: 0;
     max-width: 100px;
+    max-height: 100px;
+    padding: 1em;
 }
 
 .further__links {
@@ -237,8 +242,10 @@ h3{ font-size: var(--fs-h3) }
 
 header {
     display: flex;
-    justify-content: space-between;
-    padding: 1em;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 80px;
 
 }
 
